# raspberry

./: tools_install.sh
ble/: install.sh  run.sh
cc1101/: CMakeLists.txt
cc1101/apps/receiver/: Makefile  Makefile.all  RX_Demo.cpp
cc1101/apps/zniffer/: Makefile  main.c
cc1101/rpi3/: Makefile  README.md
gpio/: gpio.py
python/udp_echo_server/: udp_echo_server.py  udp_transmit.py
servers/: start.sh
servers/dhcp/: install_dhcp.sh  start_dhcp.sh  stop_dhcp.sh
servers/dhcp/config/: dhcpcd.conf  dhcpd.conf
servers/dns/: install_dns.sh
servers/dns/bind/: esoftthings.com  forward.example.com  named.conf.local  reverse.example.com
servers/nginx/: install_nginx.sh
